WIP small change

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>VivekPipaliya</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <meta content="vivekpipaliya pipaliyavivek" name="description">
+  <meta content="vivekpipaliya pipaliyavivek" name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -49,7 +49,7 @@
         <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
         <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
         <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
-        <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li>
+       <!-- <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li>-->
         <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
       </ul>
     </nav><!-- .nav-menu -->
@@ -363,11 +363,12 @@ with evolving game standards and development technologies.</li>
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>App 2</h4>
-                <p>App</p>
+                <h4>OnetPuzzle</h4>
+                <p>2d Puzzlegame</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                <!---    <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>-->
+				 <a href="https://mega.nz/file/EG4zzSCQ#klZ8jTuywHI5ZIwaVJOS1P0bpkxfdhDAHRv6DZyop34"> Download</a>
                 </div>
               </div>
             </div>
@@ -382,7 +383,8 @@ with evolving game standards and development technologies.</li>
                 <p>Card</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                <!---  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a> --->
+				  <a href="https://mega.nz/file/EG4zzSCQ#klZ8jTuywHI5ZIwaVJOS1P0bpkxfdhDAHRv6DZyop34"> Download</a>
                 </div>
               </div>
             </div>
@@ -405,12 +407,12 @@ with evolving game standards and development technologies.</li>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/portfolio-611.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Jackpot</h4>
                 <p>Luckey Jackport</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-6.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/portfolio-611.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3"><i class="bx bx-plus"></i></a>
            <!---       <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a> --->
 <a href="https://play.unity.com/mg/other/webgl-builds-170703"> Play</a>
                 </div>
@@ -438,19 +440,17 @@ with evolving game standards and development technologies.</li>
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Jackpot</h4>
-                <p>Stickey 3d</p>
+                <h4>MoreMoney</h4>
+                <p>HyperCasual</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/portfolio-6.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3"><i class="bx bx-plus"></i></a>
            <!---       <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a> --->
-<a href="https://play.unity.com/mg/other/webgl-builds-170703"> Play</a>
+<a href="https://mega.nz/file/8SQBAT6R#mu6uwjUXW7L1TyUJdHq8YOWdKH2yxzjEpFcSQ8yOAwE"> Download</a>
                 </div>
               </div>
             </div>
           </div>
         </div>
-
-
        <!---    <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-8.jpg" class="img-fluid" alt="">
@@ -486,7 +486,7 @@ with evolving game standards and development technologies.</li>
     </section><!-- End Portfolio Section -->
 
     <!-- ======= Services Section ======= -->
-    <section id="services" class="services">
+    <!-- <section id="services" class="services">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
@@ -577,10 +577,10 @@ with evolving game standards and development technologies.</li>
         </div>
 
       </div>
-    </section><!-- End Services Section -->
-
+    </section> <!-- End Services Section -->
+	
     <!-- ======= Testimonials Section ======= -->
-    <section id="testimonials" class="testimonials section-bg">
+  <!--  <section id="testimonials" class="testimonials section-bg">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
@@ -603,7 +603,7 @@ with evolving game standards and development technologies.</li>
               </div>
             </div><!-- End testimonial item -->
 
-            <div class="swiper-slide">
+          <!--  <div class="swiper-slide">
               <div class="testimonial-item">
                 <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
                 <h3>Sara Wilsson</h3>
@@ -616,7 +616,7 @@ with evolving game standards and development technologies.</li>
               </div>
             </div><!-- End testimonial item -->
 
-            <div class="swiper-slide">
+          <!--  <div class="swiper-slide">
               <div class="testimonial-item">
                 <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
                 <h3>Jena Karlis</h3>
@@ -629,7 +629,7 @@ with evolving game standards and development technologies.</li>
               </div>
             </div><!-- End testimonial item -->
 
-            <div class="swiper-slide">
+           <!-- <div class="swiper-slide">
               <div class="testimonial-item">
                 <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
                 <h3>Matt Brandon</h3>
@@ -642,7 +642,7 @@ with evolving game standards and development technologies.</li>
               </div>
             </div><!-- End testimonial item -->
 
-            <div class="swiper-slide">
+         <!--   <div class="swiper-slide">
               <div class="testimonial-item">
                 <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
                 <h3>John Larson</h3>
@@ -655,13 +655,14 @@ with evolving game standards and development technologies.</li>
               </div>
             </div><!-- End testimonial item -->
 
-          </div>
+       <!--   </div>
           <div class="swiper-pagination"></div>
         </div>
 
-      </div>
+      </div> 
+	  
     </section><!-- End Testimonials Section -->
-
+   
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
       <div class="container" data-aos="fade-up">
@@ -677,19 +678,19 @@ with evolving game standards and development technologies.</li>
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p>A108 Adam Street, New York, NY 535022</p>
+                <p>194, Gayatri Nagar-3, Katargam, Surat - 395004</p>
               </div>
 
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>info@example.com</p>
+                <p>pipaliyavivek308@gmail.com</p>
               </div>
 
               <div class="phone">
                 <i class="bi bi-phone"></i>
                 <h4>Call:</h4>
-                <p>+1 5589 55488 55s</p>
+                <p>+917048641492</p>
               </div>
 
             </div>
@@ -733,24 +734,24 @@ with evolving game standards and development technologies.</li>
   <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
-      <h3>Brandon Johnson</h3>
-      <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p>
+      <h3>Vivek Pipaliya</h3>
+      <p>my inbox is always open. Whether you have a question or just want to say hi, I'll try my best to get back to you! Thank you!..</p>
       <div class="social-links">
-        <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+		<a href="https://twitter.com/Pipaliyavivek2" class="twitter"><i class="bx bxl-twitter"></i></a>
+        <a href="https://www.facebook.com/vnpipaliya/" class="facebook"><i class="bx bxl-facebook"></i></a>
+        <a href="https://www.instagram.com/vivek_pipaliya_/" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <a href="https://join.skype.com/invite/w9yrRB9tyxqG" class="google-plus"><i class="bx bxl-skype"></i></a>
+        <a href="https://www.linkedin.com/in/vivek-pipaliya-4a99181a8/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
-      <div class="copyright">
-        &copy; Copyright <strong><span>MyResume</span></strong>. All Rights Reserved
+      <!--<div class="copyright">
+       <!-- &copy; Copyright <strong><span>MyResume</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: [license-url] -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/free-html-bootstrap-template-my-resume/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+     <!--   Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
       </div>
     </div>
   </footer><!-- End Footer -->
