--- a/index.html
+++ b/index.html
@@ -6,12 +6,17 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>VivekPipaliya</title>
-  <meta content="vivekpipaliya pipaliyavivek" name="description">
+  <meta content=" I'm vivekpipaliya Unity Game Developer" name="description">
   <meta content="vivekpipaliya pipaliyavivek" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
+  <!--<link href="assets/img/favicon.png" rel="icon" type="image/x-icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  -->
+  
+       <link rel = "icon" href = 
+"https://lh3.googleusercontent.com/a-/AOh14GhOLWnbqzs05lMrGJfHYcidPCCs1NDvkXXxi0zKKw=s317-p-rw-no"
+        type = "image/x-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
