--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>20</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>21</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Diploma In Computer</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>PhEmailone:</strong> <span>pipaliyavivek308@gmail.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>pipaliyavivek308@gmail.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
                 </ul>
               </div>
@@ -384,12 +384,12 @@ with evolving game standards and development technologies.</li>
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Card 2</h4>
-                <p>Card</p>
+                <h4>Farm Land: Farming Life Game</h4>
+                <p>Working progress </p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
                 <!---  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a> --->
-				  <a href="https://mega.nz/file/EG4zzSCQ#klZ8jTuywHI5ZIwaVJOS1P0bpkxfdhDAHRv6DZyop34"> Download</a>
+				  <a href="https://mega.nz/file/hOQglCRb#TUd_9A3N7xvXnsTdh6DA98LgFPxNNIx4TqjztzH05_c">Look Video</a>
                 </div>
               </div>
             </div>
@@ -683,7 +683,7 @@ with evolving game standards and development technologies.</li>
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p>194, Gayatri Nagar-3, Katargam, Surat - 395004</p>
+                <p>194, Gayatri Nagar-3, Katargam, Surat, India</p>
               </div>
 
               <div class="email">
