--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
         <div class="section-title">
           <h2>Facts</h2>
-          <p>Game Developer with 2+ years of experience in now seeking to gain and maintain long term employment in an environment where one can use advanced customer service skills to ensure customer satisfaction.</p>
+          <p>Game Developer with 3+ years of experience in now seeking to gain and maintain long term employment in an environment where one can use advanced customer service skills to ensure customer satisfaction.</p>
         </div>
 
         <div class="row">
@@ -215,7 +215,7 @@
             </div>
 
             <div class="progress">
-              <span class="skill">WordPress/CMS <i class="val">90%</i></span>
+              <span class="skill">WordPress <i class="val">90%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -260,7 +260,7 @@ work and to emerge as winner in each circumstances.</p>
 --->
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>tapi diploma engineering college</h4>
+              <h4>Tapi diploma engineering college</h4>
               <h5>2016 - 2019</h5>
               <p><em>Kapodra, Varachha Road, Surat – 395 006.</em></p>
               <p>Tapi Diploma Engineering College, emphasizes to impart quality education to the students and thereby make dynamic professional in their respective fields and worthy citizens of great country</p>
