--- a/index.html
+++ b/index.html
@@ -32,12 +32,6 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: MyResume - v4.7.0
-  * Template URL: https://bootstrapmade.com/free-html-bootstrap-template-my-resume/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body>
@@ -65,7 +59,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Vivek Pipaliya</h1>
-      <p>I'm <span class="typed" data-typed-items="Game Developer,Game Designer, Freelancer, Photographer"></span></p>
+      <p>I'm <span class="typed" data-typed-items="Game Developer,Game Designer,Animator, Freelancer"></span></p>
       <div class="social-links">
         <a href="https://twitter.com/Pipaliyavivek2" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="https://www.facebook.com/vnpipaliya/" class="facebook"><i class="bx bxl-facebook"></i></a>
@@ -84,7 +78,8 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>As An Game Developer, responsible for developing new game features and supporting existing features for the game. Responsible for ensuring that the game runs smoothly, meets deadlines, and is ready for release. They also work closely with marketing to ensure the game has a strong launch.</p>
+          <p>As a Game Developer, I specialize in innovating new game features and refining existing ones to ensure seamless gameplay experiences. My role encompasses maintaining smooth performance, meeting deadlines, and preparing games for release. Collaborating closely with marketing teams, I contribute to successful launches, ensuring that each game receives the attention it deserves for a memorable and impactful debut in the gaming world.
+          </p>
         </div>
 
         <div class="row">
@@ -100,7 +95,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>13 Jun 2001</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.vivekpipaliya.ml</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>pipaliyavivek.github.io/vivek</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+917048641492</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Surat, India</span></li>
                 </ul>
@@ -127,7 +122,8 @@
 
         <div class="section-title">
           <h2>Facts</h2>
-          <p>Game Developer with 3+ years of experience in now seeking to gain and maintain long term employment in an environment where one can use advanced customer service skills to ensure customer satisfaction.</p>
+          <p>
+            Experienced Game Developer with over 3 years in the industry, seeking a long-term role to utilize advanced customer service skills and ensure customer satisfaction. Passionate about delivering exceptional gaming experiences and contributing to team success.</p>
         </div>
 
         <div class="row">
@@ -248,7 +244,7 @@ work and to emerge as winner in each circumstances.</p>
 
         <div class="row">
           <div class="col-lg-6">
-    <!---   <div class="resume-item pb-0"> 
+       <!-- <div class="resume-item pb-0"> 
             <h4>Brandon Johnson</h4>
               <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
               <ul>
@@ -256,53 +252,52 @@ work and to emerge as winner in each circumstances.</p>
                 <li>(123) 456-7891</li>
                 <li>alice.barkley@example.com</li>
               </ul>
-            </div>
---->
+            </div> -->
+
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
               <h4>Tapi diploma engineering college</h4>
               <h5>2016 - 2019</h5>
               <p><em>Kapodra, Varachha Road, Surat – 395 006.</em></p>
-              <p>Tapi Diploma Engineering College, emphasizes to impart quality education to the students and thereby make dynamic professional in their respective fields and worthy citizens of great country</p>
+             <ul> <li><p>Tapi Diploma Engineering College, emphasizes to impart quality education to the students and thereby make dynamic professional in their respective fields and worthy citizens of great country</li></p></ul>
             </div>
-<!---
+
             <div class="resume-item">
-              <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
-              <h5>2010 - 2014</h5>
-              <p><em>Kapodra, Varachha Road, Surat – 395 006.</em></p>
-              <p>Tapi Diploma Engineering College, emphasizes to impart quality education to the students and thereby make dynamic professional in their respective fields and worthy citizens of great country</p>
+              <h4>BVM Infotech</h4>
+              <h5>Dec 2020 - Feb 2022 </h5>
+              <p><em>Silver Business Point,near VIP Circle, Uttran, Surat</em></p>
+              <ul>
+                <li><p>Overall, my experience at BVM Infotech as a Game Developer has been invaluable in fostering a passion for mini-games development and equipping me with a diverse set of skills to tackle challenges in the gaming industry.</p>
+              </ul>
             </div>
--->
+
           </div>
           <div class="col-lg-6">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4> BVM Infotech</h4>
-              <h5>2022 - Present</h5>
-              <p><em>Silver Business Point,near VIP Circle, Uttran, Surat</em></p>
+              <h4> ZENVARA INFOTECH LLP</h4>
+              <h5>Feb 2022 - July 2022</h5>
+              <p><em>Remote</em></p>
               <ul>
-                <li>We are proud to be problem solvers. We like the people we work with – coworkers, managers, clients – and genuinely enjoy helping one another succeed.</li>
-                <li>Design, build, and maintain efficient, reusable, and reliable code.Ensure the best 
-performance, quality, and responsiveness of applications and games. </li>
-                <li>Be part of the development process and contribute improvements and suggestions.</li>
-                <li> driving the quality of the code throughout the entire 
-production cycle. Experience with game physics and particle systems to constantly learn and stay in touch 
-with evolving game standards and development technologies.</li>
+                <li>Developed captivating toddler games and simulation prototypes, showcasing expertise in game design principles. Employed innovative methods to craft immersive and educational experiences for children. Collaborated with diverse teams to enhance game concepts and iterate on gameplay mechanics effectively.</li>
               </ul>
             </div>
             <div class="resume-item">
-<!---
-              <h4>Graphic design specialist</h4>
-              <h5>2017 - 2018</h5>
-              <p><em>Stepping Stone Advertising, New York, NY</em></p>
+              <h4>Dobs Infotech</h4>
+              <h5>July 2022 - Jun 2023</h5>
+              <p><em>Laxmi enclave, Katargam, Surat</em></p>
               <ul>
-                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
+                <li>Developed games spanning hypercasual, action, sports, simulation, and puzzle genres. Proficient in game design, development, and optimization. Integrated ads, in-app purchases, Firebase, and Play services to boost user engagement and monetization.</li>
               </ul>
             </div>
---->
+            <div class="resume-item">
+              <h4>Hashtag Infosystem</h4>
+              <h5>Jun 2023 - Present</h5>
+              <p><em>Nanpura, Surat</em></p>
+              <ul>
+                <li>Senior Lead Game Developer with expertise in creating 3D simulation gamification projects and hypercasual games. Proficient animator. Experienced in leading teams, optimizing game performance, and ensuring timely delivery of high-quality projects.</li>
+              </ul>
+            </div>
           </div>
         </div>
 
