--- a/index.html
+++ b/index.html
@@ -678,7 +678,7 @@ work and to emerge as winner in each circumstances.</p>
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p>194, Gayatri Nagar-3, Katargam, Surat, India</p>
+                <p>Surat, India</p>
               </div>
 
               <div class="email">
