--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
   <!--<link href="assets/img/favicon.png" rel="icon" type="image/x-icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
   -->
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-MVBN0T95GN"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-MVBN0T95GN');
+</script>
   
        <link rel = "icon" href = 
 "https://lh3.googleusercontent.com/a-/AOh14GhOLWnbqzs05lMrGJfHYcidPCCs1NDvkXXxi0zKKw=s317-p-rw-no"
