--- a/index.html
+++ b/index.html
@@ -91,11 +91,10 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>As a Game Developer, I specialize in innovating new game features and refining existing ones to ensure
-            seamless gameplay experiences. My role encompasses maintaining smooth performance, meeting deadlines, and
-            preparing games for release. Collaborating closely with marketing teams, I contribute to successful
-            launches, ensuring that each game receives the attention it deserves for a memorable and impactful debut in
-            the gaming world.
+          <p>As a Game Developer, I specialize in designing and enhancing game features to deliver smooth and engaging
+            gameplay experiences. My responsibilities include optimizing performance, meeting project deadlines, and
+            preparing games for successful releases. By working closely with cross-functional teams, including marketing
+            and design, I help ensure every project launches effectively and leaves a lasting impression on players.
           </p>
         </div>
 
@@ -104,7 +103,7 @@
             <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
-            <h3>Game Developer &amp; Game Designer .</h3>
+            <h3>Unity Game Developer</h3>
             <p class="fst-italic">
               Extremely efficient Game Programmer seeking a position in which my creative skills and programming
               knowledge can be used as an asset to the company.
@@ -145,9 +144,10 @@
         <div class="section-title">
           <h2>Facts</h2>
           <p>
-            Experienced Game Developer with over 3 years in the industry, seeking a long-term role to utilize advanced
-            customer service skills and ensure customer satisfaction. Passionate about delivering exceptional gaming
-            experiences and contributing to team success.</p>
+            Experienced Game Developer with 4.5 years of hands-on experience in 2D and 3D game development. Specialized
+            in Unity and multiplayer game systems, with a strong passion for creating engaging and high-quality gaming
+            experiences. Currently working as a Team Lead and Senior Game Developer, focused on continuous learning,
+            innovation, and delivering successful projects.</p>
         </div>
 
         <div class="row">
@@ -270,9 +270,9 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-          <p>To work in competitive and creative environment facing challenges with willingness
-            to learn and improve my abilities and skills with continuous efforts and dedication towards
-            work and to emerge as winner in each circumstances.</p>
+          <p>To work in a competitive and creative environment, face challenges with a positive attitude, and
+            continuously learn and improve my skills through dedication and hard work, in order to succeed in every
+            situation.</p>
         </div>
 
         <div class="row">
@@ -297,6 +297,11 @@
                   <p>Tapi Diploma Engineering College, emphasizes to impart quality education to the students and
                     thereby make dynamic professional in their respective fields and worthy citizens of great country
                 </li>
+                <li>
+                  <p>The College Project, ‘Online Truck Booking System for Logistics,’ developed using PHP, aims to
+                    provide an efficient, reliable, and user-friendly platform to streamline transportation management
+                    and enhance logistics operations.</p>
+                </li>
                 </p>
               </ul>
             </div>
@@ -312,14 +317,10 @@
                     challenges in the gaming industry.</p>
               </ul>
             </div>
-
-          </div>
-          <div class="col-lg-6">
-            <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
               <h4> ZENVARA INFOTECH LLP</h4>
               <h5>Feb 2022 - July 2022</h5>
-              <p><em>Remote</em></p>
+              <p><em>Remote Surat</em></p>
               <ul>
                 <li>Developed captivating toddler games and simulation prototypes, showcasing expertise in game design
                   principles. Employed innovative methods to craft immersive and educational experiences for children.
@@ -327,6 +328,12 @@
                   effectively.</li>
               </ul>
             </div>
+
+
+          </div>
+          <div class="col-lg-6">
+            <h3 class="resume-title">Professional Experience</h3>
+
             <div class="resume-item">
               <h4>Dobs Infotech</h4>
               <h5>July 2022 - Jun 2023</h5>
@@ -345,6 +352,22 @@
                 <li>Senior Lead Game Developer with expertise in creating 3D simulation gamification projects and
                   hypercasual games. Proficient animator. Experienced in leading teams, optimizing game performance, and
                   ensuring timely delivery of high-quality projects.</li>
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4>Asag Androapps Pvt. Ltd.</h4>
+              <h5>Aug 2023 - present</h5>
+              <p><em>Belapur CBD, Mumbai</em></p>
+              <ul>
+                <li>Team Lead and Senior Unity C# Developer at ASAG AndroApps, I lead the development of real-money
+                  online gaming projects including Rummy, Teen Patti, Ludo, and other multiplayer skill-based games. My
+                  role focuses on delivering secure, optimized, and engaging gameplay experiences while guiding the team
+                  through the complete development cycle.
+
+                  I design and implement scalable gameplay architecture, real-time multiplayer systems, matchmaking
+                  logic, payment/wallet features, and user-friendly UI/UX flows. I work closely with backend, design,
+                  and QA teams to ensure smooth integration, stable builds, and seamless player experience across
+                  Android, iOS, and cross-platform environments.</li>
               </ul>
             </div>
           </div>
