--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
       <div class="social-links">
         <a href="https://www.linkedin.com/in/vivek-pipaliya-4a99181a8/" class="linkedin"><i
             class="bx bxl-linkedin"></i></a>
-        <a href="https://join.skype.com/invite/w9yrRB9tyxqG" class="google-plus"><i class="bx bxl-skype"></i></a>
+        <a href="https://teams.live.com/l/invite/FEAFYHy6-OClkqaVg4?v=g1" class="google-plus"><i
+            class="bx bxl-skype"></i></a>
         <a href="https://twitter.com/Pipaliyavivek2" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="https://www.facebook.com/vnpipaliya/" class="facebook"><i class="bx bxl-facebook"></i></a>
         <a href="https://www.instagram.com/vivek_pipaliya_/" class="instagram"><i class="bx bxl-instagram"></i></a>
@@ -545,7 +546,48 @@
             </div>
           </div>
         </div>
-
+        <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/portfolio-details-10.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Letscard Best!!</h4>
+              <p>Card</p>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/portfolio-details-10.png" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox" title="Letscard Best!"><i class="bx bx-plus"></i></a>
+                <a href="https://games.insenc.in/">Play</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/portfolio-details-12.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>BetSocio!</h4>
+              <p>Card</p>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/portfolio-details-12.jpg" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox" title="BetSocio!"><i class="bx bx-plus"></i></a>
+                <a href="https://games.betsocio.com/">Gameplay</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/portfolio-details-13.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Triple Fun!</h4>
+              <p>Card</p>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/portfolio-details-13.jpg" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox" title="Triple Fun!"><i class="bx bx-plus"></i></a>
+                <a href="https://games.betsocio.com/">Gameplay</a>
+              </div>
+            </div>
+          </div>
+        </div>
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-web">
           <div class="portfolio-wrap">
@@ -563,10 +605,10 @@
           </div>
         </div>
       </div>
-    </section><!-- End Portfolio Section -->
+      <!-- </section>End Portfolio Section -->
 
-    <!-- ======= Services Section ======= -->
-    <!-- <section id="services" class="services">
+      <!-- ======= Services Section ======= -->
+      <!-- <section id="services" class="services">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
@@ -657,10 +699,11 @@
         </div>
 
       </div>
-    </section> <!-- End Services Section -->
+    </section> 
+    <!-- End Services Section -->
 
-    <!-- ======= Testimonials Section ======= -->
-    <!--  <section id="testimonials" class="testimonials section-bg">
+      <!-- ======= Testimonials Section ======= -->
+      <!--  <section id="testimonials" class="testimonials section-bg">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
@@ -683,7 +726,7 @@
               </div>
             </div><!-- End testimonial item -->
 
-    <!--  <div class="swiper-slide">
+      <!--  <div class="swiper-slide">
               <div class="testimonial-item">
                 <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
                 <h3>Sara Wilsson</h3>
@@ -696,7 +739,7 @@
               </div>
             </div><!-- End testimonial item -->
 
-    <!--  <div class="swiper-slide">
+      <!--  <div class="swiper-slide">
               <div class="testimonial-item">
                 <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
                 <h3>Jena Karlis</h3>
@@ -709,7 +752,7 @@
               </div>
             </div><!-- End testimonial item -->
 
-    <!-- <div class="swiper-slide">
+      <!-- <div class="swiper-slide">
               <div class="testimonial-item">
                 <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
                 <h3>Matt Brandon</h3>
@@ -722,7 +765,7 @@
               </div>
             </div><!-- End testimonial item -->
 
-    <!--   <div class="swiper-slide">
+      <!--   <div class="swiper-slide">
               <div class="testimonial-item">
                 <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
                 <h3>John Larson</h3>
@@ -735,7 +778,7 @@
               </div>
             </div><!-- End testimonial item -->
 
-    <!--   </div>
+      <!--   </div>
           <div class="swiper-pagination"></div>
         </div>
 
@@ -743,71 +786,71 @@
 	  
     </section><!-- End Testimonials Section -->
 
-    <!-- ======= Contact Section ======= -->
-    <section id="contact" class="contact">
-      <div class="container" data-aos="fade-up">
+      <!-- ======= Contact Section ======= -->
+      <section id="contact" class="contact">
+        <div class="container" data-aos="fade-up">
 
-        <div class="section-title">
-          <h2>Contact</h2>
-        </div>
+          <div class="section-title">
+            <h2>Contact</h2>
+          </div>
 
-        <div class="row mt-1">
+          <div class="row mt-1">
 
-          <div class="col-lg-4">
-            <div class="info">
-              <div class="address">
-                <i class="bi bi-geo-alt"></i>
-                <h4>Location:</h4>
-                <p>Surat, India</p>
+            <div class="col-lg-4">
+              <div class="info">
+                <div class="address">
+                  <i class="bi bi-geo-alt"></i>
+                  <h4>Location:</h4>
+                  <p>Surat, India</p>
+                </div>
+
+                <div class="email">
+                  <i class="bi bi-envelope"></i>
+                  <h4>Email:</h4>
+                  <p>pipaliyavivek308@gmail.com</p>
+                </div>
+
+                <div class="phone">
+                  <i class="bi bi-phone"></i>
+                  <h4>Call:</h4>
+                  <p>+917048641492</p>
+                </div>
+
               </div>
 
-              <div class="email">
-                <i class="bi bi-envelope"></i>
-                <h4>Email:</h4>
-                <p>pipaliyavivek308@gmail.com</p>
-              </div>
+            </div>
 
-              <div class="phone">
-                <i class="bi bi-phone"></i>
-                <h4>Call:</h4>
-                <p>+917048641492</p>
-              </div>
+            <div class="col-lg-8 mt-5 mt-lg-0">
+
+              <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+                <div class="row">
+                  <div class="col-md-6 form-group">
+                    <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
+                  </div>
+                  <div class="col-md-6 form-group mt-3 mt-md-0">
+                    <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
+                  </div>
+                </div>
+                <div class="form-group mt-3">
+                  <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
+                </div>
+                <div class="form-group mt-3">
+                  <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
+                </div>
+                <div class="my-3">
+                  <div class="loading">Loading</div>
+                  <div class="error-message"></div>
+                  <div class="sent-message">Your message has been sent. Thank you!</div>
+                </div>
+                <div class="text-center"><button type="submit">Send Message</button></div>
+              </form>
 
             </div>
 
           </div>
 
-          <div class="col-lg-8 mt-5 mt-lg-0">
-
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
-              <div class="row">
-                <div class="col-md-6 form-group">
-                  <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
-                </div>
-                <div class="col-md-6 form-group mt-3 mt-md-0">
-                  <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
-                </div>
-              </div>
-              <div class="form-group mt-3">
-                <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
-              </div>
-              <div class="form-group mt-3">
-                <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
-              </div>
-              <div class="my-3">
-                <div class="loading">Loading</div>
-                <div class="error-message"></div>
-                <div class="sent-message">Your message has been sent. Thank you!</div>
-              </div>
-              <div class="text-center"><button type="submit">Send Message</button></div>
-            </form>
-
-          </div>
-
         </div>
-
-      </div>
-    </section><!-- End Contact Section -->
+      </section><!-- End Contact Section -->
 
   </main><!-- End #main -->
 
@@ -821,7 +864,8 @@
         <a href="https://twitter.com/Pipaliyavivek2" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="https://www.facebook.com/vnpipaliya/" class="facebook"><i class="bx bxl-facebook"></i></a>
         <a href="https://www.instagram.com/vivek_pipaliya_/" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="https://join.skype.com/invite/w9yrRB9tyxqG" class="google-plus"><i class="bx bxl-skype"></i></a>
+        <a href="https://teams.live.com/l/invite/FEAFYHy6-OClkqaVg4?v=g1" class="google-plus"><i
+            class="bx bxl-skype"></i></a>
         <a href="https://www.linkedin.com/in/vivek-pipaliya-4a99181a8/" class="linkedin"><i
             class="bx bxl-linkedin"></i></a>
       </div>
