--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
               <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Farm Land</h4>
-                <p>In Progress</p>
+                <p>Prototype</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/portfolio-4.jpg" class="portfolio-lightbox"><i
                       class="bx bx-plus"></i></a>
@@ -537,7 +537,7 @@
               <img src="assets/img/portfolio/portfolio-8.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Match Trio</h4>
-                <p>Card</p>
+                <p>3D</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/portfolio-8.jpg" class="portfolio-lightbox"><i
                       class="bx bx-plus"></i></a>
@@ -553,11 +553,12 @@
               <img src="assets/img/portfolio/portfolio-details-10.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>LetsCard Best</h4>
-                <p>Card</p>
+                <p>22+ games </p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/portfolio-details-10.png" class="portfolio-lightbox"><i
                       class="bx bx-plus"></i></a>
-                  <a href="https://games.insenc.in/">Play</a>
+                  <a
+                    href="https://techinshower-my.sharepoint.com/:v:/g/personal/vivekpipaliya_techinshower_onmicrosoft_com/IQA2SDmGJU-CS7TyynIu_TCRAdppea3img1ChCu_t_w2UJI?nav=eyJyZWZlcnJhbEluZm8iOnsicmVmZXJyYWxBcHAiOiJPbmVEcml2ZUZvckJ1c2luZXNzIiwicmVmZXJyYWxBcHBQbGF0Zm9ybSI6IldlYiIsInJlZmVycmFsTW9kZSI6InZpZXciLCJyZWZlcnJhbFZpZXciOiJNeUZpbGVzTGlua0NvcHkifX0&e=I55UQ9">Play</a>
                 </div>
               </div>
             </div>
@@ -569,11 +570,12 @@
               <img src="assets/img/portfolio/portfolio-details-12.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>BetSocio</h4>
-                <p>Card</p>
+                <p>Horse Bet</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/portfolio-details-12.jpg" class="portfolio-lightbox"><i
                       class="bx bx-plus"></i></a>
-                  <a href="https://games.betsocio.com/">Play</a>
+                  <a
+                    href="https://techinshower-my.sharepoint.com/:v:/g/personal/vivekpipaliya_techinshower_onmicrosoft_com/IQDDc6ARaueqRJC16SvIY0TuAU3ceSxiCCUO7J1huC3sPRI?nav=eyJyZWZlcnJhbEluZm8iOnsicmVmZXJyYWxBcHAiOiJPbmVEcml2ZUZvckJ1c2luZXNzIiwicmVmZXJyYWxBcHBQbGF0Zm9ybSI6IldlYiIsInJlZmVycmFsTW9kZSI6InZpZXciLCJyZWZlcnJhbFZpZXciOiJNeUZpbGVzTGlua0NvcHkifX0&e=dttUY4">Play</a>
                 </div>
               </div>
             </div>
@@ -585,18 +587,96 @@
               <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Kill The Monster</h4>
-                <p>Web</p>
+                <p>3D</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/portfolio-9.jpg" class="portfolio-lightbox"><i
                       class="bx bx-plus"></i></a>
                   <a
-                    href="https://play.google.com/store/apps/details?id=com.Hashtaginfosystem.KillTheToiletMonster">Download</a>
+                    href="https://play.google.com/store/apps/details?id=com.Hashtaginfosystem.KillTheToiletMonster">Video</a>
                 </div>
               </div>
             </div>
           </div>
 
+          <!-- 13 -->
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/portfolio-details-13.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Triple Fun</h4>
+                <p>Lottery</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/portfolio/portfolio-details-13.jpg" class="portfolio-lightbox"><i
+                      class="bx bx-plus"></i></a>
+                  <a
+                    href="https://techinshower-my.sharepoint.com/:v:/g/personal/vivekpipaliya_techinshower_onmicrosoft_com/IQBOqEp3EEAER6ar25TLCgfoAex1IVU-0O_7I2P9_VFOgko?nav=eyJyZWZlcnJhbEluZm8iOnsicmVmZXJyYWxBcHAiOiJPbmVEcml2ZUZvckJ1c2luZXNzIiwicmVmZXJyYWxBcHBQbGF0Zm9ybSI6IldlYiIsInJlZmVycmFsTW9kZSI6InZpZXciLCJyZWZlcnJhbFZpZXciOiJNeUZpbGVzTGlua0NvcHkifX0&e=Lep2Xm">Video</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- 14 -->
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/portfolio-details-14.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Nut & Bolt</h4>
+                <p>Wood Screw Puzzle</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/portfolio/portfolio-details-14.jpg" class="portfolio-lightbox"><i
+                      class="bx bx-plus"></i></a>
+                  <a href="https://play.google.com/store/apps/details?id=com.hashtaginfosystem.screwpuzzle">Download</a>
+                </div>
+              </div>
+            </div>
+          </div>
 
+          <!-- 15 -->
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/portfolio-details-15.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Dominoes Connect</h4>
+                <p> Puzzle Game</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/portfolio/portfolio-details-15.jpg" class="portfolio-lightbox"><i
+                      class="bx bx-plus"></i></a>
+                  <a
+                    href="https://play.google.com/store/apps/details?id=com.HashtagInfosystem.DominoesConnectPuzzleGame">Download</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- 16 -->
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/portfolio-details-16.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Join War 3D</h4>
+                <p> hypercasual</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/portfolio/portfolio-details-16.jpg" class="portfolio-lightbox"><i
+                      class="bx bx-plus"></i></a>
+                  <a href="https://www.youtube.com/watch?v=K-YFNYHNK38">Video</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- 17 -->
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/portfolio-details-17.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>VR Bowling</h4>
+                <p>Virtual reality</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/portfolio/portfolio-details-17.jpg" class="portfolio-lightbox"><i
+                      class="bx bx-plus"></i></a>
+                  <a
+                    href="https://techinshower-my.sharepoint.com/:v:/g/personal/vivekpipaliya_techinshower_onmicrosoft_com/IQAKdwxRznAaQLz7JFguxwmnASLRDLF4iXsKMSyaDIe4wbo?nav=eyJyZWZlcnJhbEluZm8iOnsicmVmZXJyYWxBcHAiOiJPbmVEcml2ZUZvckJ1c2luZXNzIiwicmVmZXJyYWxBcHBQbGF0Zm9ybSI6IldlYiIsInJlZmVycmFsTW9kZSI6InZpZXciLCJyZWZlcnJhbFZpZXciOiJNeUZpbGVzTGlua0NvcHkifX0&e=T8N8fk">Video</a>
+                </div>
+              </div>
+            </div>
+          </div>
 
         </div>
       </div>
