--- a/index.html
+++ b/index.html
@@ -393,9 +393,9 @@
           <div class="col-lg-12 d-flex justify-content-center" data-aos="fade-up" data-aos-delay="100">
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-app">App</li>
+              <li data-filter=".filter-app">Puzzle</li>
               <li data-filter=".filter-card">Card</li>
-              <li data-filter=".filter-web">Web</li>
+              <li data-filter=".filter-web">Action</li>
             </ul>
           </div>
         </div>
@@ -420,7 +420,7 @@
           </div>
 
           <!-- 2 -->
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -452,7 +452,7 @@
           </div>
 
           <!-- 4 -->
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -484,7 +484,7 @@
           </div>
 
           <!-- 6 -->
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-611.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -500,7 +500,7 @@
           </div>
 
           <!-- 7 -->
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -516,7 +516,7 @@
           </div>
 
           <!-- 8 -->
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -532,7 +532,7 @@
           </div>
 
           <!-- 9 -->
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-8.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -599,7 +599,7 @@
           </div>
 
           <!-- 13 -->
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-details-13.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -615,7 +615,7 @@
             </div>
           </div>
           <!-- 14 -->
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-details-14.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -631,7 +631,7 @@
           </div>
 
           <!-- 15 -->
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-details-15.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -678,7 +678,7 @@
             </div>
           </div>
           <!-- 18 -->
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-details-18.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -688,6 +688,21 @@
                   <a href="assets/img/portfolio/portfolio-details-18.jpg" class="portfolio-lightbox"><i
                       class="bx bx-plus"></i></a>
                   <a href="https://play.google.com/store/apps/details?id=com.ludo.bachpan&hl=en_IN">Video</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- 19 -->
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/portfolio-details-19.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Connect Numbers 2248</h4>
+                <p>Puzzle</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/portfolio/portfolio-details-19.jpg" class="portfolio-lightbox"><i
+                      class="bx bx-plus"></i></a>
+                  <a href="https://play.google.com/store/apps/details?id=com.vgames.connectline">Download</a>
                 </div>
               </div>
             </div>
