--- a/index.html
+++ b/index.html
@@ -258,6 +258,14 @@
               </div>
             </div>
 
+            <div class="progress">
+              <span class="skill">AR/VR <i class="val">50%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+                </div>
+              </div>
+            </div>
+
           </div>
 
         </div>
@@ -707,6 +715,22 @@
               </div>
             </div>
           </div>
+          <!-- 20 -->
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/portfolio-details-20.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Slot Game</h4>
+                <p>Slot</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/portfolio/portfolio-details-20.jpg" class="portfolio-lightbox"><i
+                      class="bx bx-plus"></i></a>
+                  <a href="https://www.youtube.com/watch?v=Q2or6Cdp4us">Youtube</a>
+                </div>
+              </div>
+            </div>
+          </div>
+
 
         </div>
       </div>
