--- a/index.html
+++ b/index.html
@@ -471,8 +471,7 @@
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/portfolio-9.jpg" class="portfolio-lightbox"><i
                       class="bx bx-plus"></i></a>
-                  <a
-                    href="https://play.google.com/store/apps/details?id=com.Hashtaginfosystem.KillTheToiletMonster">Video</a>
+                  <a href="https://www.youtube.com/watch?v=KOaPveIfJo4">Video</a>
                 </div>
               </div>
             </div>
