--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>13 Jun 2001</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong>
-                    <span>pipaliyavivek.github.io/vivek</span>
+                    <span><a href="https://pipaliyavivek.github.io">pipaliyavivek.github.io</a></span>
                   </li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+917048641492</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Surat, India</span></li>
