--- a/index.html
+++ b/index.html
@@ -279,9 +279,17 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-          <p>To work in a competitive and creative environment, face challenges with a positive attitude, and
-            continuously learn and improve my skills through dedication and hard work, in order to succeed in every
-            situation.</p>
+          <p>
+            To work in a competitive and creative environment, face challenges with a positive attitude,
+            and continuously learn and improve my skills through dedication and hard work,
+            in order to succeed in every situation.
+          </p>
+
+          <!-- Download Button -->
+          <a href="assets/files/Resume.pdf" download="Vivek_Pipaliya_Resume.pdf" class="btn btn-primary mt-3"
+            style="font-size:14px; padding:6px 15px;">
+            <i class="bi bi-download"></i> Download Resume
+          </a>
         </div>
 
         <div class="row">
